--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,5 @@ services:
         command: sh -c "python manage.py runserver 0.0.0.0:8000"
         environment: 
             - DEBUG=1
+            - SECRET_KEY=samplesecretkey123
+            - ALLOWED_HOSTS=0.0.0.0
